# archidex

./: .dev.vars.example  .env.example  .gitignore  CLAUDE.md  README.md  astro.config.mjs  commitlint.config.cjs  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json  worker-configuration.d.ts  wrangler.jsonc
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  database.py  main.py
apps/api/app/api/: chat.py  documents.py  health.py  usage.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/models/: schemas.py
apps/api/app/services/: chunker.py  converter.py  embeddings.py  input_guard.py  llm.py  ocr.py  query_enhancer.py  rag_pipeline.py  usage.py  vector_store.py
apps/api/app/store/: session_store.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: d7370ff58b1e_initial_schema.py
apps/app/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
apps/web/: .dev.vars.example  .prettierignore  eslint.config.js  lint-staged.config.js  package.json  prettier.config.js  worker-configuration.d.ts  wrangler.jsonc
src/: env.d.ts  middleware.ts
src/components/: Allmatics.astro  BetaApply.astro  Calculator.astro  Faq.astro  Footer.astro  ForWhom.astro  Header.astro  Hero.astro  Pricing.astro  ProductMock.astro  Security.astro  posthog.astro
src/i18n/: index.ts
src/layouts/: Layout.astro
src/lib/: notion.ts  (+1 more)
(+39 files in other folders)
